fix: add bottom margin to footer sections on mobile

--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -17,8 +17,10 @@
   }
 
   p {
-    margin: 0;
     font-weight: 600;
+    @include bp(desktop) {
+      margin: 0;
+    }
   }
 
   @include bp(desktop) {
